--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     
     <hr>
     <h3><a href="persona.html">Personality</a></h3>
-    <h3><a href="Contact.html">Contact Details</a></h3>
+    <h3><a href="contact.html">Contact Details</a></h3>
  </body>
 
 </html>
